--- a/index.html
+++ b/index.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     
+    <!-- navbar section code -->
+     <header>
+        <nav class="navbar">
+            <div class="logo">Influencer products</div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign up</a></li>
+                <li><a href="">Log In</a></li>
+            </ul>
+        </nav>
+     </header>
+     <main>
+
+        <!-- hero section code -->
+        <section>
+
+        </section>
+     </main>
 </body>
 </html>
