added hero section

--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
      <main>
 
         <!-- hero section code -->
-        <section>
-
+        <section class="section-container">
+           <div class="hero-container">
+            <div class="hero-content">
+                <h4 class="hero-title">Start your Journey as 
+                  Influencer</h4>
+                  <p class="hero-word">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                  <button class="btn">Preebook now</button>
+                 </div>
+                <div class="hero-img">
+                  <img src="logos/images/main-camera.png" alt="">
+                </div>
+           </div>
         </section>
      </main>
 </body>
