added card section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,95 @@
                 </div>
            </div>
         </section>
+
+         <!-- card section code -->
+        <section class="section-container">
+            <h3 class="card-heading">Popular Collection</h3>
+            <div class="card-container">
+               <div class="card-img">
+                <img src="logos/images/tripod.png" alt="">
+                <div class="card-content">
+                    <h4 class="card-titel">Flex Tripod</h4>
+                    <h2 class="card-taka">$50.48</h2>
+                    <p class="card-word">Wordwide shifting available
+                       Buyers protection possible!</p>
+                   </div>
+                </div>
+                <div class="card-img">
+                    <img src="logos/images/mic.png" alt="">
+                  <div class="card-content">
+                   <h4 class="card-titel">microphone</h4>
+                     <h2 class="card-taka">$120.25</h2>
+                     <p class="card-word">Wordwide shifting available
+                   Buyers protection possible!</p>
+                     </div>
+                   </div> 
+                   <div class="card-img">
+                    <img src="logos/images/airpod.png" alt="">
+                    <div class="card-content">
+                        <h4 class="card-titel">Airbuds</h4>
+                        <h2 class="card-taka">$100.00</h2>
+                        <p class="card-word">Wordwide shifting available
+                           Buyers protection possible!</p>
+                       </div>
+                    </div>
+                    <div class="card-img">
+                        <img src="logos/images/drone.png" alt="">
+                        <div class="card-content">
+                            <h4 class="card-titel">Drone</h4>
+                            <h2 class="card-taka">$980.25</h2>
+                            <p class="card-word">Wordwide shifting available
+                               Buyers protection possible!</p>
+                           </div>
+                        </div>
+                        <div class="card-img">
+                            <img src="logos/images/lights.png" alt="">
+                            <div class="card-content">
+                                <h4 class="card-titel">Light Setup</h4>
+                                <h2 class="card-taka">$1200.00</h2>
+                                <p class="card-word">Wordwide shifting available
+                                   Buyers protection possible!</p>
+                               </div>
+                            </div>
+                            <div class="card-img">
+                                <img src="logos/images/setup.png" alt="">
+                                <div class="card-content">
+                                    <h4 class="card-titel">Photoshoot set</h4>
+                                    <h2 class="card-taka">$820-00</h2>
+                                    <p class="card-word">Wordwide shifting available
+                                       Buyers protection possible!</p>
+                                   </div>
+                                </div>
+                                <div class="card-img">
+                                    <img src="logos/images/camera.png" alt="">
+                                    <div class="card-content">
+                                        <h4 class="card-titel">Vlogging Camera</h4>
+                                        <h2 class="card-taka">$1800.80</h2>
+                                        <p class="card-word">Wordwide shifting available
+                                           Buyers protection possible!</p>
+                                       </div>
+                                    </div>
+                                    <div class="card-img">
+                                        <img src="logos/images/single-light.png" alt="">
+                                        <div class="card-content">
+                                            <h4 class="card-titel">Green Screen</h4>
+                                            <h2 class="card-taka">$25.48</h2>
+                                            <p class="card-word">Wordwide shifting available
+                                               Buyers protection possible!</p>
+                                           </div>
+                                        </div>
+                                        <div class="card-img">
+                                            <img src="logos/images/tripod.png" alt="">
+                                            <div class="card-content">
+                                                <h4 class="card-titel">Action Camera</h4>
+                                                <h2 class="card-taka">$380.00/h2>
+                                                    <p class="card-word">Wordwide shifting available
+                                                        Buyers protection possible!</p>
+                                               </div>
+                                            </div>
+                                             
+            </div>
+        </section>
      </main>
 </body>
 </html>
