--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                            </div>
                                         </div>
                                         <div class="card-img">
-                                            <img src="logos/images/tripod.png" alt="">
+                                            <img src="logos/images/action.png" alt="">
                                             <div class="card-content">
                                                 <h4 class="card-titel">Action Camera</h4>
                                                 <h2 class="card-taka">$380.00/h2>
