create a about us section

--- a/index.html
+++ b/index.html
@@ -121,10 +121,23 @@
                                                     <p class="card-word">Wordwide shifting available
                                                         Buyers protection possible!</p>
                                                </div>
-                                            </div>
-                                             
+                                            </div>       
             </div>
         </section>
+
+        <!-- About us section code -->
+         <section class="section-container">
+            <div class="about-container">
+                <div class="about-img">
+                    <img src="logos/images/gear.png" alt="">
+                </div>
+                <div class="about-content">
+                    <h3 class="about-title">Featured products at one place</h3>
+                    <p class="about-text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <button class="btn">Join Now</button>
+                </div>
+            </div>
+         </section>
      </main>
 </body>
 </html>
