--- a/index.html
+++ b/index.html
@@ -139,5 +139,16 @@
             </div>
          </section>
      </main>
+
+     <!-- footer section code -->
+      <footer>
+        <div class="section-container">
+            <div class="footer-container">
+                <h4 class="footer-title">Influencer products</h4>
+                <h3 class="footer-text">Copyright © 2020  influencer products</h3>
+                <p class="footer-word">All rights reserved</p>
+            </div>
+        </div>
+      </footer>
 </body>
 </html>
