create footer section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <img src="logos/images/setup.png" alt="">
                                 <div class="card-content">
                                     <h4 class="card-titel">Photoshoot set</h4>
-                                    <h2 class="card-taka">$820-00</h2>
+                                    <h2 class="card-taka">$820.00</h2>
                                     <p class="card-word">Wordwide shifting available
                                        Buyers protection possible!</p>
                                    </div>
@@ -98,7 +98,7 @@
                                 <div class="card-img">
                                     <img src="logos/images/camera.png" alt="">
                                     <div class="card-content">
-                                        <h4 class="card-titel">Vlogging Camera</h4>
+                                        <h4 class="card-titel">Vlog Camera</h4>
                                         <h2 class="card-taka">$1800.80</h2>
                                         <p class="card-word">Wordwide shifting available
                                            Buyers protection possible!</p>
@@ -117,7 +117,7 @@
                                             <img src="logos/images/action.png" alt="">
                                             <div class="card-content">
                                                 <h4 class="card-titel">Action Camera</h4>
-                                                <h2 class="card-taka">$380.00/h2>
+                                                <h2 class="card-taka">$380.00</h2>
                                                     <p class="card-word">Wordwide shifting available
                                                         Buyers protection possible!</p>
                                                </div>
